--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <div class="box_skitter box_skitter_large">
             <ul>
 
-              <li> <a href=""><img src="image/meta_final.png" alt="" width="1px" /></a>
+              <li> <a href=""><img src="image/meta_final6.png" alt="" width="1px" /></a>
                 <!--li><div class="label_text">
                 <h1 >Learning and Teaching in the Big Data Era</h1>
                 <span>23 - 27 May 2016</span></div>
