update registration fee and AC member

--- a/about-us.html
+++ b/about-us.html
@@ -148,14 +148,14 @@
                 <td class="py-3 px-6 text-left">National Central University, Taiwan</td>
               </tr>
               <tr class="hover:bg-gray-100 duration-300">
-                <td class="py-3 px-6 font-extrabold text-left">Advisory Committee</td>
-                <td class="py-3 px-6 text-left">TBD</td>
-                <td class="py-3 px-6 text-left"></td>
+                <td class="py-3 px-6 font-extrabold text-left">Advisory Committee member</td>
+                <td class="py-3 px-6 text-left">Ulrich HOPPE</td>
+                <td class="py-3 px-6 text-left">University of Duisburg-Essen, Germany</td>
               </tr>
               <tr class="hover:bg-gray-100 duration-300">
-                <td class="py-3 px-6 font-extrabold text-left"></td>
-                <td class="py-3 px-6 text-left">TBD</td>
-                <td class="py-3 px-6 text-left"></td>
+                <td class="py-3 px-6 font-extrabold text-left">Advisory Committee member</td>
+                <td class="py-3 px-6 text-left">Riichiro MIZOGUCHI</td>
+                <td class="py-3 px-6 text-left">Japan Advanced Institute of Science and Technology, Japan</td>
               </tr>
               <tr class="hover:bg-gray-100 duration-300">
                 <td class="py-3 px-6 font-extrabold text-left"></td>
