add cozzi alfar hotel

--- a/accommodation.html
+++ b/accommodation.html
@@ -98,14 +98,16 @@ jQuery(document).ready(function(){
             <h3> Accommodation </h3>
             <div id="map"></div>
             <!-- <img src="image/Hotel map.png" width="120%" alt="" /><br> -->
-            <t2><a href="https://zhongli.hubhotel.com.tw/" target="_blank">Hub Hotel</a></t2><br>
-            <t2><a href="https://www.hotelin.com.tw/?lang=en" target="_blank">Hotel IN</a></t2><br>
-            <t2><a href="http://taoyuan.hotel-j.com.tw/en/" target="_blank">Hotel-J-Taoyuan</a></t2><br>
-            <t2><a href="https://www.kuva-chateau.com.tw/" target="_blank">Hotel Kuva Chateau</a></t2><br>
-            <t2><a href="https://www.kingsparadise.com/web/main_en" target="_blank">King's Paradise Hotel</a></t2><br>
-            <t2><a href="https://jungli.lemidi-hotel.com.tw/en/" target="_blank">Le Midi Hotel</a></t2><br>
-            <t2><a href="https://www.fullon-hotels.com.tw/jl/en/" target="_blank">Fullon Hotel Jhongli</a></t2><br>
-            <t2><a href="http://www.hotelmu.com.tw/" target="_blank">Hotel MU</a></t2>
+            <!-- <t2><a href="https://zhongli.hubhotel.com.tw/" target="_blank">Hub Hotel</a></t2><br> -->
+            <t2><a href="https://www.hotelin.com.tw/?lang=en" target="_blank">Hotel IN</a></t2><span> (2.4 km)</span><br>
+            <!-- <t2><a href="http://taoyuan.hotel-j.com.tw/en/" target="_blank">Hotel-J-Taoyuan</a></t2><br> -->
+            <t2><a href="https://www.kuva-chateau.com.tw/" target="_blank">Hotel Kuva Chateau</a><span> (3.1 km)</span></t2><br>
+            <t2><a href="https://www.kingsparadise.com/web/main_en" target="_blank">King's Paradise Hotel</a><span> (3.6 km)</span></t2><br>
+            <t2><a href="https://jungli.lemidi-hotel.com.tw/en/" target="_blank">Le Midi Hotel</a><span> (3.3 km)</span></t2><br>
+            <t2><a href="https://www.fullon-hotels.com.tw/jl/en/" target="_blank">Fullon Hotel Jhongli</a><span> (3.7 km)</span></t2><br>
+            <t2><a href="http://www.hotelmu.com.tw/" target="_blank">Hotel MU</a><span> (3.3 km)</span></t2><br>
+            <t2><a href="https://www.alfar.com.tw/" target="_blank">Alfar Hotel</a><span> (8.3 km)</span></t2><br>
+            <t2><a href="https://hotelcozzi.com/en/cozzi-blu/" target="_blank">HOTEL COZZI</a><span> (7.7 km)</span></t2>
         </div>
         <div class="clear"></div>
         <!-- clear float -->
