make registration invisible

--- a/reg.html
+++ b/reg.html
@@ -118,10 +118,10 @@
 						</div>
 
 						<h3><strong>Registration Fees</strong></h3>
-						<!-- <img src="image/Simple Notice Under Construction.png" width="100%" alt=""/> -->
+						<img src="image/Simple Notice Under Construction.png" width="100%" alt=""/>
 						<div class="separator small"></div>
 
-						<h6 class="morespace">
+						<!-- <h6 class="morespace">
 							<table>
 								<tbody>
 									<tr>
@@ -148,7 +148,7 @@
 									<tr>
 										<td width="47%">Non-APSCE member</td>
 
-										<td width="33%">USD440 (NTD138,00)</td>
+										<td width="33%">USD440 (NTD13,800)</td>
 									</tr>
 									<tr>
 										<td width="47%">Student or K-12 teacher non-member</td>
@@ -164,7 +164,7 @@
 									</tr>
 								</tbody>
 							</table>
-						</h6>
+						</h6> -->
 
 						<!-- <h5 class="morespace">* One-year APSCE membership fee (1 June 2023 to 31 May 2024) is included
 							in MetaACES 2024 registration fee.</h5>
@@ -276,7 +276,8 @@
 						
 						
 						<div class="clear"></div><!-- clear float -->
-					</div><!-- end #maincontent -->
+					</div>
+					<!-- end #maincontent -->
 					<div id="sidebar">
 						<ul>
 
