update advisory committee

--- a/about-us.html
+++ b/about-us.html
@@ -157,6 +157,23 @@
                 <td class="py-3 px-6 text-left">Riichiro MIZOGUCHI</td>
                 <td class="py-3 px-6 text-left">Japan Advanced Institute of Science and Technology, Japan</td>
               </tr>
+              <tr class="hover:bg-gray-100 duration-300">
+                <td class="py-3 px-6 font-extrabold text-left">Advisory Committee member</td>
+                <td class="py-3 px-6 text-left">W. Lewis Johnson</td>
+                <td class="py-3 px-6 text-left">President and CEO, Alelo Inc</td>
+              </tr>
+              <tr class="hover:bg-gray-100 duration-300">
+                <td class="py-3 px-6 font-extrabold text-left">Advisory Committee member</td>
+                <td class="py-3 px-6 text-left">Amy L. Baylor</td>
+                <td class="py-3 px-6 text-left">Lead Program Director, Emerging Technologies for Learning
+                Division of Research on Learning (DRL)
+                National Science Foundation</td>
+              </tr>
+              <tr class="hover:bg-gray-100 duration-300">
+                <td class="py-3 px-6 font-extrabold text-left">Advisory Committee member</td>
+                <td class="py-3 px-6 text-left">Claude Frasson</td>
+                <td class="py-3 px-6 text-left">Honorary Professor, University of Montreal</td>
+              </tr>
             </tbody>
           </table>
           <div class="org-title mt-10">APSCE MetaACES Steering Committee</div>
