update senior pc member

--- a/about-us.html
+++ b/about-us.html
@@ -491,13 +491,18 @@
               </tr>
               <tr class="hover:bg-gray-100 duration-300">
                 <td class="py-3 px-6 font-extrabold text-left">21. </td>
-                <td class="py-3 px-6 text-left">Prof. Li, S C Sandy</td>
+                <td class="py-3 px-6 text-left">Li, S C Sandy</td>
                 <td class="py-3 px-6 text-left">Hong Kong Baptist University, Hong Kong</td>
               </tr>
               <tr class="hover:bg-gray-100 duration-300">
                 <td class="py-3 px-6 font-extrabold text-left">22. </td>
-                <td class="py-3 px-6 text-left">Prof. Cristina Conati</td>
+                <td class="py-3 px-6 text-left">Cristina Conati</td>
                 <td class="py-3 px-6 text-left">University of British Columbia, Canada</td>
+              </tr>
+              <tr class="hover:bg-gray-100 duration-300">
+                <td class="py-3 px-6 font-extrabold text-left">23. </td>
+                <td class="py-3 px-6 text-left">Gord McCalla</td>
+                <td class="py-3 px-6 text-left">University of Saskatchewan, Canada</td>
               </tr>
               
               <!-- <tr class="hover:bg-gray-100 duration-300">
