update steering committee

--- a/about-us.html
+++ b/about-us.html
@@ -189,9 +189,34 @@
                 <td class="py-3 px-6 text-left">Athabasca University, Canada</td>
               </tr>
               <tr class="hover:bg-gray-100 duration-300">
-                <td class="py-3 px-6 font-extrabold text-left">Steering Committee Co-chair</td>
+                <td class="py-3 px-6 font-extrabold text-left">Steering Committee Members</td>
                 <td class="py-3 px-6 text-left">Siu-Cheung KONG</td>
                 <td class="py-3 px-6 text-left">The Education University of Hong Kong, Hong</td>
+              </tr>
+              <tr class="hover:bg-gray-100 duration-300">
+                <td class="py-3 px-6 font-extrabold text-left"></td>
+                <td class="py-3 px-6 text-left">Tak-Wai Chan</td>
+                <td class="py-3 px-6 text-left">National Central University</td>
+              </tr>
+              <tr class="hover:bg-gray-100 duration-300">
+                <td class="py-3 px-6 font-extrabold text-left"></td>
+                <td class="py-3 px-6 text-left">Chee-Kit Looi</td>
+                <td class="py-3 px-6 text-left">The Education University of Hong Kong</td>
+              </tr>
+              <tr class="hover:bg-gray-100 duration-300">
+                <td class="py-3 px-6 font-extrabold text-left"></td>
+                <td class="py-3 px-6 text-left">Gautam Biswas</td>
+                <td class="py-3 px-6 text-left">Vanderbilt University</td>
+              </tr>
+              <tr class="hover:bg-gray-100 duration-300">
+                <td class="py-3 px-6 font-extrabold text-left"></td>
+                <td class="py-3 px-6 text-left">Hiroaki Ogata</td>
+                <td class="py-3 px-6 text-left">Kyoto University, Japan</td>
+              </tr>
+              <tr class="hover:bg-gray-100 duration-300">
+                <td class="py-3 px-6 font-extrabold text-left"></td>
+                <td class="py-3 px-6 text-left">Ying-Tien Wu</td>
+                <td class="py-3 px-6 text-left">National Central University</td>
               </tr>
             </tbody>
           </table>
@@ -218,7 +243,7 @@
               <tr class="hover:bg-gray-100 duration-300">
                 <td class="py-3 px-6 font-extrabold text-left">International Program Chair</td>
                 <td class="py-3 px-6 text-left">Chee Kit Looi</td>
-                <td class="py-3 px-6 text-left">National Institute of Education, Singapore</td>
+                <td class="py-3 px-6 text-left">The Education University of Hong Kong</td>
               </tr>
               <tr class="hover:bg-gray-100 duration-300">
                 <td class="py-3 px-6 font-extrabold text-left">International Program Chair (Executive)</td>
