update registration fee

--- a/reg.html
+++ b/reg.html
@@ -118,10 +118,10 @@
 						</div>
 
 						<h3><strong>Registration Fees</strong></h3>
-						<img src="image/Simple Notice Under Construction.png" width="100%" alt=""/>
+						<!-- <img src="image/Simple Notice Under Construction.png" width="100%" alt=""/> -->
 						<div class="separator small"></div>
 
-						<!-- <h6 class="morespace">
+						<h6 class="morespace">
 							<table>
 								<tbody>
 									<tr>
@@ -152,7 +152,7 @@
 									</tr>
 									<tr>
 										<td width="47%">Student or K-12 teacher non-member</td>
-										<td width="33%">USD120 (NTD3,800)</td>
+										<td width="33%">USD220 (NTD7,000)</td>
 									<tr>
 										<th colspan="2">Teacher Forum</th>
 									</tr>
@@ -164,7 +164,7 @@
 									</tr>
 								</tbody>
 							</table>
-						</h6> -->
+						</h6>
 
 						<!-- <h5 class="morespace">* One-year APSCE membership fee (1 June 2023 to 31 May 2024) is included
 							in MetaACES 2024 registration fee.</h5>
