change table to organization chart

--- a/call-for-paper.html
+++ b/call-for-paper.html
@@ -281,7 +281,7 @@
                     href="/download/MetaACES2024_CopyrightAgreement.docx"
                     target="_blank">copyright agreement</a> via EasyChair by 12 May 2024. </h4>
                 <h4 class="morespace"><strong>NOTE: </strong> MetaACES has <strong> No-Show Policy </strong> --
-                  "MeteACES reserves the right to exclude a paper from distribution after the event (e.g., removal from
+                  "MetaACES reserves the right to exclude a paper from distribution after the event (e.g., removal from
                   the final published and indexed proceedings) if the paper is not presented by an author during the
                   event."</h4>
 
