change artificial to AI

--- a/about-us.html
+++ b/about-us.html
@@ -104,7 +104,7 @@
         <div class="shadow"></div>
         <div class="container940">
           <h1 class="pagetitle">About Us</h1>
-          <div class="pagedesc">The 2nd International Conference on Metaverse and Artificial Companions in Education and
+          <div class="pagedesc">The 2nd International Conference on Metaverse and AI Companions in Education and
             Society</div>
           <div class="clear"></div><!-- clear float -->
         </div><!-- end container940 -->
@@ -129,7 +129,7 @@
 
           <h2 class="title_pattern"><strong><span>Introduction</span></strong></h2>
           <div class="separator small"></div>
-          <h3 class="morespace" style="font-size:16px;">The 2nd International Conference on Metaverse and Artificial
+          <h3 class="morespace" style="font-size:16px;">The 2nd International Conference on Metaverse and AI
             Companions in Education and
             Society (MetaACES 2024) will be conducted on 19 - 21 June 2024.</h3>
           <h3 class="morespace" style="font-size:16px;">We look forward to seeing you at MetaACES 2024!</h3>
