--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <div class="box_skitter box_skitter_large">
             <ul>
 
-              <li> <a href=""><img src="image/meta_final6.png" alt="" width="1px" /></a>
+              <li> <a href=""><img src="image/MetaACES11.jpeg" alt="" width="1px" /></a>
                 <!--li><div class="label_text">
                 <h1 >Learning and Teaching in the Big Data Era</h1>
                 <span>23 - 27 May 2016</span></div>
@@ -163,18 +163,18 @@
       <div id="content">
         <div id="main">
           <h2 class="title_pattern" style="text-align: center;"><strong><span style="white-space: pre;">The 2nd International Conference on</span>
-          </br><span>Metaverse and Artificial Companions in Education and Society</span></strong></h2>
+          </br><span>Metaverse and AI Companions in Education and Society</span></strong></h2>
           <div class="separator small"></div>
           <!--li><img src="images/GEEEC20-animation.gif" alt="" width="245" height="219" class="alignright" /><></li-->
           <h3 class="morespace">MetaACES is one of the APSCE Theme-based International Conference Series. The 2nd
-            International Conference on Metaverse and Artificial Companions in Education and Society (MetaACES 2024),
+            International Conference on Metaverse and AI Companions in Education and Society (MetaACES 2024),
             organized by National Central University in Taiwan, will be held on 19 - 21 June 2024.</h3>
           <h3 class="morespace">MetaACES 2024 aims to provide an interactive platform for academics, researchers,
             practitioners, and professionals in the education sector to share and exchange research agenda, innovative
-            ideas as well as practices of promoting and exploring metaverse, artificial companions, and related
+            ideas as well as practices of promoting and exploring metaverse, AI companions, and related
             technologies. MetaACES 2024 comprises keynotes, seminars and panels delivered by internationally renowned
             scholars, researchers, and practitioners. Catalysed and facilitated by emerging technologies, the metaverse
-            and related artificial companions will affect us in every aspect of our lives.</h3>
+            and related AI companions will affect us in every aspect of our lives.</h3>
           <h3 class="morespace">The conference program includes keynotes, seminars, presentations, and panels. All the
             accepted papers and abstracts of the conference will be published in ISBN-coded proceedings. Accepted full
             papers will be selected and invited to submit to one of the following Open Access journals: Research and
