--- a/location.html
+++ b/location.html
@@ -80,7 +80,7 @@ jQuery(document).ready(function(){
       <div class="shadow"></div>
       <div class="container940">
         <h1 class="pagetitle">Venue</h1>
-        <div class="pagedesc">The 2nd International Conference on Metaverse and Artificial Companions in Education and Society</div>
+        <div class="pagedesc">The 2nd International Conference on Metaverse and AI Companions in Education and Society</div>
         <div class="clear"></div>
         <!-- clear float --> 
       </div>
