--- a/agenda.html
+++ b/agenda.html
@@ -82,7 +82,7 @@ jQuery(document).ready(function(){
         	<div class="shadow"></div>
         	<div class="container940">
         		<h1 class="pagetitle">programme</h1>
-                <div class="pagedesc">The 2nd International Conference on Metaverse and Artificial Companions in Education and Society</div>
+                <div class="pagedesc">The 2nd International Conference on Metaverse and AI Companions in Education and Society</div>
                 <div class="clear"></div><!-- clear float -->
             </div><!-- end container940 -->
         </div><!-- end #header -->
