--- a/call-for-paper.html
+++ b/call-for-paper.html
@@ -86,7 +86,7 @@
         <div class="shadow"></div>
         <div class="container940">
           <h1 class="pagetitle">Call for papers</h1>
-          <div class="pagedesc">The 2nd International Conference on Metaverse and Artificial Companions in Education and
+          <div class="pagedesc">The 2nd International Conference on Metaverse and AI Companions in Education and
             Society</div>
           <div class="clear"></div><!-- clear float -->
         </div><!-- end container940 -->
@@ -122,7 +122,7 @@
 
             <h2 class="title_pattern"><strong><span>Themes</span></strong></h2>
             <div class="separator small"></div>
-            <h3 class="morespace">The 2nd International Conference on Metaverse and Artificial Companions in Education
+            <h3 class="morespace">The 2nd International Conference on Metaverse and AI Companions in Education
               and Society (MetaACES 2024) focuses on the themes related to education and society. The main themes of
               MetaACES 2024 include but not limit to the followings (in alphabetical order):</h3>
             <h3><b>Program Track1: AI and Artificial Learning Companions (ALCs) in Education</b></h3>
