--- a/keynote.html
+++ b/keynote.html
@@ -110,7 +110,7 @@
 				<div class="container940">
 					<h1 class="pagetitle">Keynote</h1>
 
-					<div class="pagedesc">The 2nd International Conference on Metaverse and Artificial Companions in
+					<div class="pagedesc">The 2nd International Conference on Metaverse and AI Companions in
 						Education and Society</div>
 					<div class="clear"></div><!-- clear float -->
 				</div><!-- end container940 -->
