change call for paper to main conference and teacher forum

--- a/accommodation.html
+++ b/accommodation.html
@@ -57,7 +57,12 @@ jQuery(document).ready(function(){
 
 			        </ul>
 			      </li>
-            <li><a href="call-for-paper.html">Papers</a> </li>
+            <li><a href="call-for-paper.html">CALL FOR Papers</a>
+              <ul>
+                <li><a href="mainConference.html">Main conference</a> </li>
+                <li><a href="teacherForum.html">Teacher Forum</a> </li>
+              </ul>
+            </li>
             <li><a href="agenda.html">Programme</a>
               <ul>
 			          <li><a href="keynote.html">keynote</a> </li>
