--- a/location.html
+++ b/location.html
@@ -53,7 +53,12 @@ jQuery(document).ready(function(){
                 <li><a href="https://www.eduhk.hk/metaaces2023/index.html">MetaACES 2023 Jun</a> </li>
 			        </ul>
 			      </li>
-            <li><a href="call-for-paper.html">Call For Papers</a> </li>
+            <li><a href="call-for-paper.html">CALL FOR Papers</a>
+              <ul>
+                <li><a href="mainConference.html">Main conference</a> </li>
+                <li><a href="teacherForum.html">Teacher Forum</a> </li>
+              </ul>
+            </li>
             <li><a href="agenda.html">Programme</a>
               <ul>
 			          <li><a href="keynote.html">keynote</a> </li>
