change teacher forum deadline

--- a/teacherForum.html
+++ b/teacherForum.html
@@ -222,28 +222,22 @@
                                 <h2 class="widget-title">Important dates</h2>
                                 <ul id="recentprojectwidget">
                                     <strong>
-                                        <li><span class="colortext">Paper submission due</span><br />
-                                            <span class="date"><span>February 4, 2024</span>
+                                        <li><span class="colortext">Teacher Forum Paper Submission Deadline</span><br />
+                                            <span class="date"><span>May 15, 2024</span>
                                                 <span class="clear"></span>
                                         </li>
-                                        <li><span class="colortext">Review notification date</span><br />
-                                            <span class="date">April 28, 2024</span>
+                                        <li><span class="colortext">Teacher Forum Paper Acceptance Notification</span><br />
+                                            <span class="date">May 31, 2024</span>
                                             <span class="clear"></span>
                                         </li>
-                                        <li><span class="colortext">Camera-ready paper due</span><br />
-                                            <span class="date">May 12, 2024</span>
-                                            <span class="clear"></span>
-                                        </li>
-                                        <li><span class="colortext">Registration due (Paper Authors)</span><br />
-                                            <span class="date">May 19, 2024</span>
-                                            <span class="clear"></span>
-                                        </li>
-                                        <li><span class="colortext">Registration due (Non-Authors
-                                                Participants)</span><br />
+                                        <li><span class="colortext">Teacher Forum Paper Finalized Deadline</span><br />
                                             <span class="date">June 8, 2024</span>
                                             <span class="clear"></span>
-                                    </strong>
-                            </li>
+                                        </li>
+                                        <li><span class="colortext">Teacher Forum Registration Deadline</span><br />
+                                            <span class="date">June 8, 2024</span>
+                                            <span class="clear"></span>
+                                        </li>
                         </ul>
                         </li>
                         </ul>
