without table in about us

--- a/about-us.html
+++ b/about-us.html
@@ -143,7 +143,7 @@
           <h2 class="title_pattern"><strong><span>Organization</span></strong></h2>
           <div class="separator small"></div>
 
-          <div class="org-title mt-10">APSCE Advisory Committee</div>
+          <!--<div class="org-title mt-10">APSCE Advisory Committee</div>
           <div class="mb-10 relative">
             <div class="absolute left-0  bg-blue-500 transform -translate-y-1/2 mx-auto w-28 h-0.5"></div>
             <hr>
@@ -536,8 +536,8 @@
                 <td class="py-3 px-6 font-extrabold text-left">23. </td>
                 <td class="py-3 px-6 text-left">Gord McCalla</td>
                 <td class="py-3 px-6 text-left">University of Saskatchewan, Canada</td>
-              </tr>
-
+              </tr> -->
+              <!-- end -->
               <!-- <tr class="hover:bg-gray-100 duration-300">
                 <td class="py-3 px-6 font-extrabold text-left">7. </td>
                 <td class="py-3 px-6 text-left">Gwo-Jen Hwang</td>
@@ -584,8 +584,9 @@
                 <td class="py-3 px-6 text-left">University of Science and Technology, Taiwan</td>
               </tr> -->
             </tbody>
+          <!-- start -->
           </table>
-          <div class="org-title mt-10">PC Members</div>
+          <!-- <div class="org-title mt-10">PC Members</div>
           <div class="mb-10 relative">
             <div class="absolute left-0  bg-blue-500 transform -translate-y-1/2 mx-auto w-28 h-0.5"></div>
             <hr>
@@ -894,7 +895,8 @@
                 <td class="py-3 px-6 font-extrabold text-left">58. </td>
                 <td class="py-3 px-6 text-left">CHIU Kin-fung, Thomas</td>
                 <td class="py-3 px-6 text-left">Chinese University of Hong Kong, Hong Kong</td>
-              </tr>
+              </tr> -->
+              <!-- end -->
               <!-- <tr class="hover:bg-gray-100 duration-300">
                 <td class="py-3 px-6 font-extrabold text-left">7. </td>
                 <td class="py-3 px-6 text-left">Gwo-Jen Hwang</td>
