change paper submission due

--- a/call-for-paper.html
+++ b/call-for-paper.html
@@ -319,7 +319,8 @@
                 <ul id="recentprojectwidget">
                   <strong>
                     <li><span class="colortext">Paper submission due</span><br />
-                      <span class="date"><span>February 4, 2024</span>
+                      <span class="date"><span><s>February 4, 2024</s></span>
+                      <span style="color: #0766AD;"><strong>February 29, 2024</strong></span>
                         <span class="clear"></span>
                     </li>
                     <li><span class="colortext">Review notification date</span><br />
