--- a/index.html
+++ b/index.html
@@ -243,13 +243,13 @@ Misconceptions of statistics and data analysis in the research of e-learning and
               <div class="one_third firstcols">
                 <!--img src="images/icons/glyphicons-248-note.png" alt="" class="iconleft" /-->
                 <h2 class="valignmiddle">Paper Submission</h2>
-                <h5 class="morespace">The deadline of MetaACES 2024 paper submission will be <b style="color: #0766AD;">Feb 4, 2024.</b> 
+                <h5 class="morespace">The deadline of MetaACES 2024 paper submission will be <b><s>Feb 4, 2024 </s><span style="color: #0766AD;"><strong>February 29, 2024</strong></span>.</b> 
                   Please submit your papers via <a href="https://easychair.org/conferences/?conf=metaaces2024" target="_blank">EasyChair</a>. </br>
                   Thank you for your support! </h5>
               </div>
               <div class="one_third"><!--img src="images/icons/glyphicons-248-note.png" alt="" class="iconleft" /-->
                 <h2 class="valignmiddle">Important Dates</h2>
-                <h5 class="morespace">Paper submission due: <strong>February 4, 2024</strong></h5>
+                <h5 class="morespace">Paper submission due: <strong><s>February 4, 2024 </s></strong><span style="color: #0766AD;"><strong>February 29, 2024</strong></span></h5>
                 <h5 class="morespace">Review notification date: <strong>April 28, 2024<strong></h5>
                 <h5 class="morespace">Camera-ready paper due: <strong>May 12, 2024</strong></h5>
                 <h5 class="morespace">Registration due (Paper Authors): <p><strong>May 19, 2024</strong></h5>
