take down registration fee before update

--- a/reg.html
+++ b/reg.html
@@ -123,8 +123,8 @@
 						</div>
 
 						<h3><strong>Registration Fees</strong></h3>
-						<!-- <img src="image/Simple Notice Under Construction.png" width="100%" alt=""/> -->
-						<div class="separator small"></div>
+						<img src="image/Simple Notice Under Construction.png" width="100%" alt=""/>
+						<!-- <div class="separator small"></div>
 
 						<h6 class="morespace">
 							<table>
@@ -169,7 +169,7 @@
 									</tr>
 								</tbody>
 							</table>
-						</h6>
+						</h6> -->
 
 						<!-- <h5 class="morespace">* One-year APSCE membership fee (1 June 2023 to 31 May 2024) is included
 							in MetaACES 2024 registration fee.</h5>
