add pc member and update registration fee

--- a/about-us.html
+++ b/about-us.html
@@ -410,7 +410,7 @@
           </table>
           <div class="org-title mt-10">Senior PC Members</div>
           <div class="mb-10 relative">
-            <div class="absolute left-0  bg-blue-500 transform -translate-y-1/2 mx-auto w-28 h-0.5"></div>
+            <div class="absolute left-0 bg-blue-500 transform -translate-y-1/2 mx-auto w-28 h-0.5"></div>
             <hr>
           </div>
           <table class="border-1 min-w-full" style="font-size:14px;">
@@ -1187,6 +1187,7 @@
           <div class="grid grid-cols-3 grid-flow-row py-5 gap-5">
             <div>
               <div class="org-title">International Program Chair</div>
+              <div style="visibility: hidden; background-color: blue;">empty</div>
               <img src="image/org/Looi Chee Kit.jpg" alt="" class="alignleft frame" width="120" height="120" />
               <div class="org-name">Chee-Kit Looi</div>
               <div class="org-uni">The Education University of Hong Kong</div>
@@ -1199,6 +1200,7 @@
             </div>
             <div>
               <div class="org-title">Secretary</div>
+              <div style="visibility: hidden; background-color: blue;">empty</div>
               <img src="image/org/Li-Jen.jpeg" alt="" class="alignleft frame" width="120" height="120" />
               <div class="org-name">Li-Jen (Tommy) Wang</div>
               <div class="org-uni">National Yang Ming Chiao Tung University, Taiwan</div>
@@ -1751,6 +1753,11 @@
               <img src="image/org/ThomasCHIU (1).jpg" alt="" class="alignleft frame" width="120" height="120" />
               <div class="org-name">CHIU Kin-fung, Thomas</div>
               <div class="org-uni">Chinese University of Hong Kong, Hong Kong</div>
+            </div>
+            <div>
+              <img src="image/org/Wei-Fan Chen.jpg" alt="" class="alignleft frame" width="120" height="120" />
+              <div class="org-name">Wei-Fan Chen</div>
+              <div class="org-uni">The Pennsylvania State University, US</div>
             </div>
           </div>
 
