--- a/reg.html
+++ b/reg.html
@@ -123,8 +123,8 @@
 						</div>
 
 						<h3><strong>Registration Fees</strong></h3>
-						<img src="image/Simple Notice Under Construction.png" width="100%" alt=""/>
-						<!-- <div class="separator small"></div>
+						<!-- <img src="image/Simple Notice Under Construction.png" width="100%" alt=""/> -->
+						<div class="separator small"></div>
 
 						<h6 class="morespace">
 							<table>
@@ -137,39 +137,42 @@
 									</tr>
 
 									<tr>
-										<th colspan="2">APSCE Member</th>
+										<th>APSCE Member</th>
+										<th></th>
 									</tr>
 									<tr>
-										<td width="46%">APSCE Member</td>
-										<td width="33%">USD340 (NTD10,700)</td>
+										<td width="46%" style="text-align: left;">APSCE Member</td>
+										<td width="33%">USD$ 375 (NTD$ 11,940)</td>
 									</tr>
 									<tr>
-										<td width="47%">APSCE student or K-12 APSCE teacher member</td>
-										<td width="33%">USD120 (NTD3,800)</td>
+										<td width="47%" style="text-align: left;">APSCE student or K-12 APSCE teacher member</td>
+										<td width="33%">USD$ 135 (NTD$ 4,300)</td>
 									</tr>
 									<tr>
-										<th colspan="2">Non-APSCE Member</th>
+										<th>Non-APSCE Member</th>
+										<th></th>
 									</tr>
 									<tr>
-										<td width="47%">Non-APSCE member</td>
+										<td width="47%" style="text-align: left;">Non-APSCE member</td>
 
-										<td width="33%">USD440 (NTD13,800)</td>
+										<td width="33%">USD$ 485 (NTD$ 15,440)</td>
 									</tr>
 									<tr>
-										<td width="47%">Student or K-12 teacher non-member</td>
-										<td width="33%">USD220 (NTD7,000)</td>
+										<td width="47%" style="text-align: left;">Student or K-12 teacher non-member</td>
+										<td width="33%">USD$ 245 (NTD$ 7,800)</td>
 									<tr>
-										<th colspan="2">Teacher Forum</th>
+										<th>Teacher Forum</th>
+										<th></th>
 									</tr>
 									<tr>
-										<td width="46%">K-12 teacherr</td>
-										<td width="33%">USD80 (NTD2,500)</td>
+										<td width="46%" style="text-align: left;">K-12 teacherr</td>
+										<td width="33%">USD$ 90 (NTD$ 2,865)</td>
 									</tr>
 
 									</tr>
 								</tbody>
 							</table>
-						</h6> -->
+						</h6>
 
 						<!-- <h5 class="morespace">* One-year APSCE membership fee (1 June 2023 to 31 May 2024) is included
 							in MetaACES 2024 registration fee.</h5>
@@ -277,7 +280,7 @@
                        <h4 class="morespace">LOW-INCOME ECONOMIES</h4>
                        <h4 class="morespace">LOWER-MIDDLE INCOME ECONOMIES</h4>
                        <h4 class="morespace">UPPER-MIDDLE-INCOME ECONOMIES</h4>
-                       <h4 class="morespace">Please note that the discounted rate is based on the country of the institution (or the main employer) that the registrant is affiliated to.</h4
+                       <h4 class="morespace">Please note that the discounted rate is based on the country of the institution (or the main employer) that the registrant is affiliated to.</h4>
 						
 						
 						<div class="clear"></div><!-- clear float -->
