--- a/reg.html
+++ b/reg.html
@@ -165,7 +165,7 @@
 										<th></th>
 									</tr>
 									<tr>
-										<td width="46%" style="text-align: left;">K-12 teacherr</td>
+										<td width="46%" style="text-align: left;">K-12 teacher</td>
 										<td width="33%">USD$ 90 (NTD$ 2,865)</td>
 									</tr>
 
